force-app/main/default/objects/Completed_Task__c/Completed_Task__c.object-meta.xml
<CustomObject>
    <label>Completed Task</label>
    <nameField>
        <label>Completed Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Completed Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>