force-app/main/default/objects/Completed_Task__c/fields/Meeting_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting Scheduled</label>
    <type>Checkbox</type>
</CustomField>