force-app/main/default/objects/Completed_Task__c/fields/Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Time__c</fullName>
    <label>Meeting Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>