force-app/main/default/objects/Completed_Task__c/fields/Questionnaire_Task__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Task</label>
    <referenceTo>Questionnaire_Task__c</referenceTo>
    <relationshipLabel>Completed Tasks</relationshipLabel>
    <relationshipName>Completed_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>