force-app/main/default/objects/Completed_Task__c/fields/Target_Result__c.field-meta.xml
<CustomField>
    <fullName>Target_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Result</label>
    <referenceTo>Target_Result__c</referenceTo>
    <relationshipLabel>Completed Tasks</relationshipLabel>
    <relationshipName>Completed_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>